# vldpipe

./: .gitignore  Cargo.toml  README.md  build.rs  shell.nix
proto/: vldpipe.capnp
src/: config.rs  dialer.rs  listener.rs  main.rs  stream.rs
src/proto/: mod.rs  vldpipe_capnp.rs
