[package]
name = "vldpipe"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
flume = "0.11.0"
futures-util = "0.3.28"
thiserror = "1.0.47"
tokio = { version = "1" }
veilid-core = { git = "https://gitlab.com/veilid/veilid.git", tag = "v0.1.10", features = ["rt-tokio"] }
