[package]
name = "vldpipe"
version = "0.1.1"
edition = "2021"
description = "Publish and consume TCP services over the Veilid network."
build = "build.rs"
license = "MPL-2.0"

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
capnp = { version = "0.17.2", default_features = false }
clap = { version = "4.4.0", features = ["derive"] }
flume = "0.11.0"
futures-lite = "1.13.0"
futures-util = "0.3.28"
thiserror = "1.0.47"
tokio = { version = "1" }
veilid-core = { version = "0.2.1", features = ["rt-tokio"] }

[build-dependencies]
capnpc = "0.17.2"
